脱字の修正

--- a/.github/workflows/RunName.yml
+++ b/.github/workflows/RunName.yml
@@ -3,6 +3,6 @@ run-name: Run by @${{ github.actor }}
 on: push
 jobs:
   print:
-    runs-on: ubunts-latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Hello"
