--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -1,6 +1,6 @@
 name: Static analysis
 on:
-  pull_request
+  pull_request:
     paths: ['.github/workflows/*.yml', '.github/workflows/*.yaml']
   defaults:
     run:
