--- a/.github/workflows/bashTracing.yml
+++ b/.github/workflows/bashTracing.yml
@@ -4,7 +4,7 @@ jobs:
   log:
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - run: | # bash tracing option on
         set -x
         date
         hostname
