--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,5 +7,5 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - run: echo "${{ RUNNER_OS }}"
+      - run: echo "${RUNNER_OS}"
         shell: bash
